syntax = "proto3";

package topic_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Bulat147/rtclif-topic-service/pkg/topic_v1;topic_v1"

service TopicV1 {
    rpc CreateTopic(CreateTopicRq) returns (CreateTopicRs);
    // rpc UpdateTopic(UpdateTopicRq) returns (UpdateTopicRs);
    // rpc DeleteTopic(DeleteTopicRq) returns (DeleteTopicRs);
    rpc GetTopic(GetTopicRq) returns (GetTopicRs);
    // rpc GetTopicsList(GetTopicsListRq) returns (GetTopicsListRs); // c пагинацией через курсор (_id) - для решения ошибки смещения
    // rpc FindTopicsByText(FindTopicsByTextRq) returns (FindTopicsByTextRs);
}

message CreateTopicRq {
    TopicInfo info = 1;
}

message CreateTopicRs {
    string id = 1;
}

message TopicInfo {
    string title = 1;
    string description = 2;
}

message GetTopicRq {
    string id = 1;
}

message GetTopicRs {
    Topic topic = 1;
}

message Topic {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    google.protobuf.Timestamp created_at = 5;
}
